# HazelOS

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
.github/: nightly-build.yml
.github/workflows/: nightly-build.yml
cmake/compiler/: Flags.cmake
cmake/emulator/: Qemu.cmake
cmake/toolchains/: x86_64-clang.cmake  x86_64-gcc.cmake
kernel/: CMakeLists.txt
kernel/include/: compiler.h
kernel/include/arch/x86_64/: arch.h
kernel/include/arch/x86_64/cpu/: cpu.h  io.h  registers.h
kernel/include/arch/x86_64/drivers/: uart.h
kernel/include/arch/x86_64/memory/: paging.h
kernel/include/boot/: boot.h
kernel/include/libs/: elf.h  log.h  math.h  spinlock.h  symbols.h
kernel/include/memory/: memory.h  pagemap.h  pmm.h  vma.h  vmm.h
kernel/include/tests/: runner.h
kernel/misc/: dummy_symbols.c
kernel/src/: kmain.c
kernel/src/arch/x86_64/: arch.c  boot.S
kernel/src/arch/x86_64/cpu/: cpu.c  io.c
kernel/src/arch/x86_64/drivers/: uart.c
kernel/src/arch/x86_64/drivers/internals/: uart.h
kernel/src/arch/x86_64/libs/: spinlock.c  symbols.c
kernel/src/arch/x86_64/memory/: paging.c  vma.c  vmm.c
kernel/src/boot/: boot.c
kernel/src/libs/: log.c  spinlock.c  symbols.c
kernel/src/memory/: memory.c  pmm.c  vma.c  vmm.c
kernel/src/memory/tests/: pmm.c  vma.c
kernel/src/support/: errno.c
kernel/src/tests/: runner.c
misc/limine/: limine.conf
misc/linker/: x86_64-kernel.ld
misc/scripts/: map_to_c.py
userland/: CMakeLists.txt
userland/src/: init.c  init.cpp
